# eink

./: .gitignore  README.md  build.sh  build_display_firmware.sh  build_esp_firmware.sh  flash_display.sh  flash_esp32.sh  init.sh  pyproject.toml  server.sh
config/: server_config.yaml
